fixed spacing

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -300,6 +300,10 @@
           text-align: center;
           font-size: 110%;
       }
+
+      .screens_heading{
+          padding-left: 10%;
+      }
 }
 
 /* small phones : from 0 to 480px */
